--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -19,6 +19,7 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 mccabe==0.6.1
 oauthlib==3.1.1
+Pillow==8.3.2
 pycodestyle==2.7.0
 pycparser==2.20
 pyflakes==2.3.1
@@ -30,6 +31,7 @@ requests-oauthlib==1.3.0
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
+sorl-thumbnail==12.7.0
 sqlparse==0.4.2
 typing-extensions==3.10.0.2
 uritemplate==3.0.1
