--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,8 @@
 server {
     listen 80;
+    location /api/ {
+      proxy_pass http://127.0.0.1:8000;
+    }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
