--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -5,7 +5,10 @@ server {
         try_files $uri $uri/redoc.html;
     }
     location /api/ {
-      proxy_pass http://
+      proxy_pass http://web:8000;
+    }
+    location /admin/ {
+      proxy_pass http://web:8000;
     }
     location / {
         root /usr/share/nginx/html;
