--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,12 +20,12 @@ jobs:
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
           pip install -r ./backend/foodgram/requirements.txt
           
-      - name: Test with flake8 and django tests
+      - name: Test with flake8
         run: |
           python -m flake8
 
-  build_and_push_to_docker_hub:
-    name: Push Docker image to Docker Hub
+  build_backend:
+    name: Push backend Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
@@ -42,11 +42,35 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME  }}/foodgram:latest
+          context: backend/foodgram/
+          tags: ${{ secrets.DOCKER_USERNAME  }}/foodgram_backend:latest
+
+  build_frontend:
+    name: Push frontend Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: tests
+    steps:
+      - name: Check out the repo
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to Docker
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Push to Docker Hub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          context: frontend
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build_and_push_to_docker_hub
+    needs:
+      - build_backend
+      - build_frontend
     steps:
     - name: executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
@@ -57,8 +81,9 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         stack_file_name: docker-compose.yaml
         script: |
-          sudo docker pull ${{ secrets.DOCKER_USERNAME  }}/foodgram:latest
-          sudo docker stop
+          sudo docker pull ${{ secrets.DOCKER_USERNAME  }}/foodgram_backend:latest
+          sudo docker pull ${{ secrets.DOCKER_USERNAME  }}/foodgram_frontend:latest
+          sudo docker-compose stop
           sudo docker-compose rm web
           rm .env
           touch .env
