--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
     env_file:
       - ./backend/foodgram/.env
   web:
-    image: kulagov/foodgram:latest
+    image: kulagov/foodgram_backend:latest
     # build: ./backend/foodgram
     # expose:
     #   - "8000"
@@ -25,9 +25,11 @@ services:
       - ./backend/foodgram/.env
 
   frontend:
-    build:
-      context: ./frontend
-      dockerfile: Dockerfile
+    image: kulagov/foodgram_frontend:latest
+    # build:
+      # context: ./frontend
+      # dockerfile: Dockerfile
+    restart: always
     volumes:
       - ./frontend/:/app/result_build/
     depends_on: 
@@ -38,7 +40,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
       - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
