--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,7 +63,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          context: frontend
+          context: frontend/
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram_frontend:latest
 
   deploy:
@@ -81,6 +81,7 @@ jobs:
         passphrase: ${{ secrets.PASSPHRASE }}
         stack_file_name: docker-compose.yaml
         script: |
+          echo ${{ secrets.DOCKER_PASSWORD }} | sudo docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           sudo docker pull ${{ secrets.DOCKER_USERNAME  }}/foodgram_backend:latest
           sudo docker pull ${{ secrets.DOCKER_USERNAME  }}/foodgram_frontend:latest
           sudo docker-compose stop
