--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -86,6 +86,7 @@ jobs:
           sudo docker pull ${{ secrets.DOCKER_USERNAME  }}/foodgram_frontend:latest
           sudo docker-compose stop
           sudo docker-compose rm web
+          sudo docker-compose rm frontend
           rm .env
           touch .env
           echo 'DB_ENGINE=${{ secrets.DB_ENGINE }}' >> .env
