--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ./backend/foodgram/.env
+      - .env
 
   frontend:
     image: kulagov/foodgram_frontend:latest
