--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./backend/foodgram/.env
+      - .env
+
   web:
     image: kulagov/foodgram_backend:latest
     # build: ./backend/foodgram
@@ -31,7 +32,7 @@ services:
       # dockerfile: Dockerfile
     restart: always
     volumes:
-      - ./frontend/:/app/result_build/
+      - build_folder:/app/result_build/
     depends_on: 
       - web
 
@@ -40,7 +41,7 @@ services:
     ports:
       - "80:80"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
       - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
@@ -54,3 +55,4 @@ volumes:
   postgres_data:
   static_value:
   media_value:
+  build_folder:
