--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,11 +1,11 @@
 server {
     listen 80;
-    location /api/ {
-      proxy_pass http://62.84.117.3:8000;
-    }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+    }
+    location /web/ {
+      root /var/html;
     }
     location /api/ {
       proxy_pass http://web:8000;
@@ -28,3 +28,4 @@ server {
       }
 
 }
+
