--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -12,6 +12,7 @@ djangorestframework==3.12.4
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 flake8==3.9.2
+gunicorn==20.0.4
 idna==3.2
 importlib-metadata==1.7.0
 itypes==1.2.0
@@ -20,6 +21,7 @@ MarkupSafe==2.0.1
 mccabe==0.6.1
 oauthlib==3.1.1
 Pillow==8.3.2
+psycopg2-binary==2.8.5
 pycodestyle==2.7.0
 pycparser==2.20
 pyflakes==2.3.1
@@ -27,6 +29,7 @@ PyJWT==2.1.0
 python-decouple==3.4
 python3-openid==3.2.0
 pytz==2021.1
+reportlab==3.6.1
 requests==2.26.0
 requests-oauthlib==1.3.0
 six==1.16.0
@@ -38,5 +41,3 @@ typing-extensions==3.10.0.2
 uritemplate==3.0.1
 urllib3==1.26.6
 zipp==3.5.0
-gunicorn==20.0.4
-psycopg2-binary==2.8.5
