--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,17 +1,17 @@
 server {
     listen 80;
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
     location /web/ {
       root /var/html;
     }
     location /api/ {
       proxy_pass http://web:8000;
     }
+    location /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
     location /admin/ {
-      proxy_pass http://web:8000;
+      proxy_pass http://web:8000/admin/;
     }
     location / {
         root /usr/share/nginx/html;
