--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,14 +1,23 @@
 server {
     listen 80;
-    location /web/ {
-      root /var/html;
+    server_name 62.84.117.3;
+    location /media/ {
+      autoindex on;
+      alias /media/;
     }
-    location /api/ {
-      proxy_pass http://web:8000;
+    location /static/admin/ {
+      autoindex on;
+      alias /static/admin/;
     }
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
+    }
+    location /api/ {
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://web:8000;
     }
     location /admin/ {
       proxy_pass http://web:8000/admin/;
