--- a/docker-compose_local2.yaml
+++ b/docker-compose_local2.yaml
@@ -7,35 +7,46 @@ services:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
       - ./backend/foodgram/.env
+
   web:
-    image: kulagov/foodgram:latest
+    # image: kulagov/foodgram_backend:latest
+    build: ./backend/foodgram
+    expose:
+      - 8000
     restart: always
     volumes: 
       - static_value:/code/static/
       - media_value:/code/media/
+    # command: gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
+    ports:
+      - 8000:8000
     depends_on:
       - db
     env_file:
       - ./backend/foodgram/.env
 
   frontend:
+    # image: kulagov/foodgram_frontend:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    restart: always
     volumes:
-      - ./frontend/:/app/result_build/
+      - build_folder:/app/result_build/
+    depends_on: 
+      - web
 
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - 80:80
     volumes:
       - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
       - ./docs/redoc.html:/usr/share/nginx/html/api/docs/redoc.html
       - ./docs/openapi-schema.yml:/usr/share/nginx/html/api/docs/openapi-schema.yml
-      - static_value:/static/
-      - media_value:/media/
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
 
     depends_on: 
       - frontend
@@ -44,3 +55,4 @@ volumes:
   postgres_data:
   static_value:
   media_value:
+  build_folder:
