--- a/docker-compose_local3.yaml
+++ b/docker-compose_local3.yaml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.3'
 
 services:
   db:
@@ -6,37 +6,40 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./backend/foodgram/.env
+      - ./backend/foodgram/.env_psgr
+
   web:
-    image: kulagov/foodgram:latest
-    # build: ./backend/foodgram
-    # expose:
-    #   - "8000"
+    # image: kulagov/foodgram_backend:latest
+    build: ./backend/foodgram
+    expose:
+      - 8000
     restart: always
     volumes: 
       - static_value:/code/static/
       - media_value:/code/media/
     # command: gunicorn foodgram.wsgi:application --bind 0.0.0.0:8000
     ports:
-      - "8000:8000"
+      - 8000:8000
     depends_on:
       - db
     env_file:
-      - ./backend/foodgram/.env
+      - ./backend/foodgram/.env_psgr
 
   frontend:
+    # image: kulagov/foodgram_frontend:latest
     build:
       context: ./frontend
       dockerfile: Dockerfile
+    restart: always
     volumes:
-      - ./frontend/:/app/result_build/
+      - build_folder:/app/result_build/
     depends_on: 
       - web
 
   nginx:
     image: nginx:1.19.3
     ports:
-      - "80:80"
+      - 80:80
     volumes:
       - ./infra/nginx.conf:/etc/nginx/conf.d/default.conf
       - ./frontend/build:/usr/share/nginx/html/
@@ -52,3 +55,4 @@ volumes:
   postgres_data:
   static_value:
   media_value:
+  build_folder:
