--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -87,6 +87,7 @@ jobs:
           sudo docker-compose stop
           sudo docker-compose rm web
           sudo docker-compose rm frontend
+          sudo docker image prune -a -f
           rm .env
           touch .env
           echo 'DB_ENGINE=${{ secrets.DB_ENGINE }}' >> .env
