--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,8 +85,8 @@ jobs:
           sudo docker pull ${{ secrets.DOCKER_USERNAME  }}/foodgram_backend:latest
           sudo docker pull ${{ secrets.DOCKER_USERNAME  }}/foodgram_frontend:latest
           sudo docker-compose stop
-          sudo docker-compose rm web
-          sudo docker-compose rm frontend
+          sudo docker-compose rm -f web
+          sudo docker-compose rm -f frontend
           sudo docker image prune -a -f
           rm .env
           touch .env
