--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,25 +5,25 @@ on:
 
 jobs:
 
-  scp_docs:
-    name: scp docs
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: copy file via ssh password
-      uses: appleboy/scp-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USER }}
-        key: ${{ secrets.SSH_KEY }}
-        passphrase: ${{ secrets.PASSPHRASE }}
-        source: "docs/openapi-schema.yml, docs/redoc.html"
-        target: "docs"
-        strip_components: 1
+  # scp_docs:
+  #   name: scp docs
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #   - uses: actions/checkout@master
+  #   - name: copy file via ssh password
+  #     uses: appleboy/scp-action@master
+  #     with:
+  #       host: ${{ secrets.HOST }}
+  #       username: ${{ secrets.USER }}
+  #       key: ${{ secrets.SSH_KEY }}
+  #       passphrase: ${{ secrets.PASSPHRASE }}
+  #       source: "docs/openapi-schema.yml, docs/redoc.html"
+  #       target: "docs"
+  #       strip_components: 1
 
   tests:
     runs-on: ubuntu-latest
-    needs: scp_docs
+    # needs: scp_docs
 
     steps:
       - uses: actions/checkout@v2
