--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
   build_frontend:
     name: Push frontend Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: tests
+    needs: build_backend
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -87,9 +87,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-    needs:
-      - build_backend
-      - build_frontend
+    needs: build_frontend
     steps:
     - name: executing remote ssh commands to deploy
       uses: appleboy/ssh-action@master
